--- a/src/app/pages/account/profile/profile.component.html
+++ b/src/app/pages/account/profile/profile.component.html
@@ -36,15 +36,13 @@
                         <mat-card-title>Change Profile</mat-card-title>
                         <mat-card-subtitle>Change your profile picture from here</mat-card-subtitle>
                         <div class="text-center m-t-24">
-                            <img src="/assets/images/profile/user-1.jpg" width="120" class="rounded-circle">
-                            <br>
-                            <br>
-                            <br>    
-                            <!-- <div class="m-t-24">
-                                <button mat-flat-button color="primary" class="m-r-8">Upload</button>
-                                <button mat-stroked-button color="warn">Reset</button>
-                            </div>
-                            <span class="f-s-14 m-t-24 d-block">Allowed JPG, GIF, or PNG. Max size of 800K</span> -->
+                          <img [src]="this.user.avatar" width="140" height="140" class="rounded-circle">
+                           
+                          <!-- <div class="m-t-24">
+                            <button mat-flat-button color="primary" class="m-r-8">Upload</button>
+                            <button mat-stroked-button color="warn">Reset</button>
+                          </div>
+                          <span class="f-s-14 m-t-24 d-block">Allowed JPG, GIF, or PNG. Max size of 800K</span> -->
                         </div>
                     </mat-card-content>
                 </mat-card>
@@ -83,17 +81,14 @@
                   </mat-card-content>
                 </mat-card>
               </div>
-              
-              
-              
 
-            <!-- Personal Details Section -->
+              <!-- Personal Details Section -->
             <div class="col-12">
                 <mat-card class="mat-mdc-card mdc-card cardWithShadow">
                     <mat-card-content class="mat-mdc-card-content">
                         <mat-card-title>Personal Details</mat-card-title>
                         <mat-card-subtitle>To change your personal details, edit and save from here</mat-card-subtitle>
-                        <form [formGroup]="profileForm" (ngSubmit)="onSubmit()" class="p-t-32">
+                        <form [formGroup]="profileForm"  class="p-t-32">
                             <mat-form-field appearance="outline" color="primary" class="w-100">
                                 <mat-label>Your Name</mat-label>
                                 <input matInput formControlName="name" type="text">
@@ -103,11 +98,16 @@
                                 <mat-label>Email</mat-label>
                                 <input matInput formControlName="email" type="email">
                             </mat-form-field>
+
+                            <mat-form-field appearance="outline" color="primary" class="w-100">
+                                <mat-label>Phone</mat-label>
+                                <input matInput formControlName="phone" type="text">
+                            </mat-form-field>
                         </form>
                     </mat-card-content>
 
                     <div class="text-right p-24 p-t-0">
-                        <button mat-flat-button color="primary" class="m-r-8" type="submit">Save</button>
+                        <button mat-flat-button color="primary" class="m-r-8" type="submit"  (click)="onUpdateProfile()">Save</button>
                         <button mat-stroked-button color="warn" class="m-r-8" type="button">Cancel</button>
                     </div>
                 </mat-card>
