--- a/src/app/pages/trading/position/position.component.scss
+++ b/src/app/pages/trading/position/position.component.scss
@@ -1,16 +1,86 @@
 .table-wrapper {
-    max-width: 100%; /* Ensure the table width is responsive */
-    overflow-x: auto; /* Enable horizontal scrolling */
-    margin-bottom: 10px; /* Adds some space below the table */
+  max-width: 100%;
+  /* Ensure the table width is responsive */
+  overflow-x: auto;
+  /* Enable horizontal scrolling */
+  margin-bottom: 10px;
+  /* Adds some space below the table */
+}
+
+.pagination-wrapper {
+  display: flex;
+  justify-content: center;
+  /* Center the paginator */
+  margin-top: 10px;
+  /* Adds space between table and paginator */
+}
+
+mat-paginator {
+  width: 100%;
+  /* Ensure the paginator width is aligned with the table */
+}
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+}
+
+.inner-table {
+  width: 100%;
+}
+tr.example-detail-row {
+  height: 0px;
+}
+
+.responsive-table {
+  overflow-x: auto;
+
+  td,
+  mat-cell {
+    white-space: nowrap;
+    // padding: 16px;
   }
-  
-  .pagination-wrapper {
-    display: flex;
-    justify-content: center; /* Center the paginator */
-    margin-top: 10px; /* Adds space between table and paginator */
+}
+
+tr.example-element-row:not(.example-expanded-row):hover {
+  background: #ecf2ff;
+}
+/* Custom scrollbar styles */
+.table-container {
+  max-height: 450px;
+  overflow-y: auto;
+  overflow-x: auto;
+
+  /* Webkit browsers */
+  &::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
   }
-  
-  mat-paginator {
-    width: 100%; /* Ensure the paginator width is aligned with the table */
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
   }
-  
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+
+  /* Firefox */
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
+}
+.no-data-message {
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 20px;
+}
