--- a/src/app/pages/authentication/login-register/login-register.component.html
+++ b/src/app/pages/authentication/login-register/login-register.component.html
@@ -17,19 +17,18 @@
                   <h2>Hi, Welcome Back!</h2>
                   <p>Still do not have an account? <a href="#" (click)="setActiveTab('signup')">Sign up</a></p>
                 </div>
-                <form>
+                <form [formGroup]="loginForm" (ngSubmit)="submitLogin()" class="m-t-30">
                   <div class="row">
                     <div class="col-12">
                       <div class="input-group-meta position-relative m-b-16">
-                        <label>Email*</label>
-                        <input type="email" name="email" id="email" placeholder="Youremail@gmail.com">
-                        <div style="color: red;"></div>
+                        <label>Username/Email*</label>
+                        <input formControlName="username" type="email" name="email" id="email" placeholder="Youremail@gmail.com">
                       </div>
                     </div>
                     <div class="col-12">
                       <div class="input-group-meta position-relative m-b-16">
                         <label>Password*</label>
-                        <input type="password" name="password" id="password" placeholder="Enter Password" class="pass_log_id">
+                        <input formControlName="password" type="password" name="password" id="password" placeholder="Enter Password" class="pass_log_id">
                       </div>
                     </div>
                     <div class="col-12">
