decimal pipe changes

--- a/src/app/components/position-table/position-table.component.html
+++ b/src/app/components/position-table/position-table.component.html
@@ -25,7 +25,7 @@
           Investment
        </th>
        <td mat-cell *matCellDef="let element" class="mat-body-1">
-          {{ element.transaction_quantity * element.transaction_price }}
+          {{ (element.transaction_quantity * element.transaction_price)| number:'1.2-2' }}
        </td>
     </ng-container>
 
@@ -35,7 +35,7 @@
         Unrealized Profit
        </th>
        <td mat-cell *matCellDef="let element">
-        {{element.unrealized}}
+        {{element.unrealized | number:'1.2-2'}}
           <!-- <ng-template [ngIf]="element.priority == 'low'">
              <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12">
                 {{ element.priority | titlecase }}
@@ -70,7 +70,16 @@
         Realized Profit
        </th>
        <td mat-cell *matCellDef="let element" class="mat-body-1">
-          {{ element.realized }}
+          {{ element.realized | number:'1.2-2'}}
+       </td>
+    </ng-container>
+
+    <ng-container matColumnDef="transaction_date">
+       <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+        Date
+       </th>
+       <td mat-cell *matCellDef="let element" class="mat-body-1">
+          {{ this.utilityService.convertDateTime(element.transaction_date) }}
        </td>
     </ng-container>
 
