--- a/src/app/pages/trading/order-book/order-book.component.html
+++ b/src/app/pages/trading/order-book/order-book.component.html
@@ -66,7 +66,7 @@
        <ng-container matColumnDef="unrealized">
         <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Unrealised PnL </th>
         <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12" [ngClass]="this.utilityService.getUnrealizedRealizedClass(element.unrealized)">
-            {{element.unrealized}}
+            {{element.unrealized | number:'1.2-2'}}
         </td>
     </ng-container>
 
@@ -74,7 +74,7 @@
         <ng-container matColumnDef="realized">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Realized  PnL</th>
             <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12" [ngClass]="this.utilityService.getUnrealizedRealizedClass(element.realized)">
-                {{element.realized}}
+                {{element.realized | number:'1.2-2'}}
             </td>
         </ng-container>
 
