--- a/src/app/components/position-table/position-table.component.html
+++ b/src/app/components/position-table/position-table.component.html
@@ -1,42 +1,43 @@
+<mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
 <table mat-table [dataSource]="dataSource" class="w-100">
-    <!-- Position Column -->
-    <ng-container matColumnDef="symbol">
-       <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-          Symbol
-       </th>
-       <td mat-cell *matCellDef="let element">
-          <div class="d-flex align-items-center">
-             <img src="assets/images/profile/user-1.jpg" alt="users" width="40" class="rounded-circle" />
-             <div class="m-l-16">
-                <h6 class="mat-subtitle-1 f-s-14 f-w-600">
-                   {{ element.symbol }}
-                </h6>
-                <!-- <span class="mat-body-1 f-s-12">
+   <!-- Position Column -->
+   <ng-container matColumnDef="symbol">
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+         Symbol
+      </th>
+      <td mat-cell *matCellDef="let element">
+         <div class="d-flex align-items-center">
+            <img src="assets/images/profile/user-1.jpg" alt="users" width="40" class="rounded-circle" />
+            <div class="m-l-16">
+               <h6 class="mat-subtitle-1 f-s-14 f-w-600">
+                  {{ element.symbol }}
+               </h6>
+               <!-- <span class="mat-body-1 f-s-12">
                    {{ element.position }}
                 </span> -->
-             </div>
-          </div>
-       </td>
-    </ng-container>
+            </div>
+         </div>
+      </td>
+   </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="investment">
-       <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-          Investment
-       </th>
-       <td mat-cell *matCellDef="let element" class="mat-body-1">
-          {{ (element.transaction_quantity * element.transaction_price)| number:'1.2-2' }}
-       </td>
-    </ng-container>
+   <!-- Name Column -->
+   <ng-container matColumnDef="investment">
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+         Investment
+      </th>
+      <td mat-cell *matCellDef="let element" class="mat-body-1">
+         {{ (element.transaction_quantity * element.transaction_price)| number:'1.2-2' }}
+      </td>
+   </ng-container>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="unrealizedProfit">
-       <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-        Unrealized Profit
-       </th>
-       <td mat-cell *matCellDef="let element">
-        {{element.unrealized | number:'1.2-2'}}
-          <!-- <ng-template [ngIf]="element.priority == 'low'">
+   <!-- Weight Column -->
+   <ng-container matColumnDef="unrealizedProfit">
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+         Unrealized Profit
+      </th>
+      <td mat-cell *matCellDef="let element">
+         {{element.unrealized | number:'1.2-2'}}
+         <!-- <ng-template [ngIf]="element.priority == 'low'">
              <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12">
                 {{ element.priority | titlecase }}
              </span>
@@ -61,28 +62,32 @@
                 {{ element.priority | titlecase }}
              </span>
           </ng-template> -->
-       </td>
-    </ng-container>
+      </td>
+   </ng-container>
 
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="realizedProfit">
-       <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-        Realized Profit
-       </th>
-       <td mat-cell *matCellDef="let element" class="mat-body-1">
-          {{ element.realized | number:'1.2-2'}}
-       </td>
-    </ng-container>
+   <!-- Symbol Column -->
+   <ng-container matColumnDef="realizedProfit">
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+         Realized Profit
+      </th>
+      <td mat-cell *matCellDef="let element" class="mat-body-1">
+         {{ element.realized | number:'1.2-2'}}
+      </td>
+   </ng-container>
 
-    <ng-container matColumnDef="transaction_date">
-       <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-        Date
-       </th>
-       <td mat-cell *matCellDef="let element" class="mat-body-1">
-          {{ this.utilityService.convertDateTime(element.transaction_date) }}
-       </td>
-    </ng-container>
+   <ng-container matColumnDef="transaction_date">
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+         {{this.tableName === 'closedPositions'? 'Square-Off Date':'Buy Date' }}
+      </th>
+      <td mat-cell *matCellDef="let element" class="mat-body-1">
+         {{ this.utilityService.convertDateTime(this.tableName === 'closedPositions'? element. square_off_time:transaction_date) }}
+      </td>
+   </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
- </table>
+   <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
+   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<!-- No Data Found Message -->
+<div *ngIf="dataSource?.data?.length === 0" class="no-data-message">
+   <p>No data found.</p>
+</div>
