--- a/src/app/pages/account/subscription/subscription.component.html
+++ b/src/app/pages/account/subscription/subscription.component.html
@@ -29,6 +29,7 @@
         </div>
     </div>
     <!-- Top Section -->
+    <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
 
     <div class="row">
         <!-- Subscription Section -->
